# corewars

./: Cargo.toml  README.md
src/: lib.rs  util.rs
src/core/: address.rs  mod.rs  modifier.rs  opcode.rs  process.rs
src/load_file/: mod.rs  offset.rs  program.rs
src/parser/: error.rs  mod.rs
src/parser/grammar/: mod.rs
src/parser/phase/: comment.rs  expansion.rs  mod.rs
src/parser/phase/evaluation/: expression.rs  mod.rs
tests/: dump_test.rs  validate.rs
