[package]
name = "corewars"
version = "0.1.0"
authors = [
    "Nathaniel Cook <nvcook42@gmail.com>",
    "Ian Chamberlain <ian@corewa.rs>"
]
categories = ["games", "emulators"]
edition = "2021"
keywords = ["corewars", "core", "war", "wars", "redcode"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanielc/corewars"
description = "Implementation"

[[bin]]
name = "corewar"

[dependencies]
anyhow = "1.0.66"
env_logger = "0.10.0"
itertools = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.17"
maplit = "1.0.2"
pest = "2.1.3"
pest_derive = "2.1.0"
rand = "0.8.5"
structopt = "0.3.5"
thiserror = "1.0.21"

[dev-dependencies]
maplit = "1.0.2"
normalize-line-endings = "0.3.0"
pretty_assertions = "0.6.1"
test-case = "1.2.0"
test-generator = "0.3.0"
textwrap = "0.13.4"
textwrap-macros = "0.2.5"
